--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <title>Code Editor</title>
     <link rel="stylesheet" href="/css/App.css" />
     <link rel="preload" href="/fonts/FiraCode-VariableFont.ttf" as="font" type="font/ttf" crossorigin />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <script type="module" src="/packages/renderer-process/src/rendererProcessMain.js"></script>
     <link rel="apple-touch-icon" href="/icons/pwa-icon-192.png" />
     <meta name="theme-color" content="#282e2f" />
