--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -12,5 +12,4 @@
     <link rel="apple-touch-icon" href="/icons/pwa-icon-192.png" />
     <meta name="theme-color" content="#282e2f" />
   </head>
-  <body></body>
 </html>
